--- a/demo/style.css
+++ b/demo/style.css
@@ -17,10 +17,10 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    font-size: 14px;
-    height: 40px;
+    font-size: 28px;
+    height: 80px;
     line-height: 1;
-    padding: 0 10px;
+    padding: 0 20px;
     position: relative;
     text-align: center;
     white-space: nowrap;
@@ -229,8 +229,8 @@
 .mint-cell-label {
     color: #888;
     display: block;
-    font-size: 12px;
-    margin-top: 6px;
+    font-size: 24px;
+    margin-top: 12px;
 }
 .mint-cell-title {
     -webkit-box-flex: 1;
@@ -247,7 +247,7 @@
             align-items: center;
 }
 .mint-cell-value.is-link {
-    margin-right:24px;
+    margin-right:48px;
 }
 .mint-cell-left {
     position: absolute;
@@ -319,7 +319,7 @@
     display: flex;
 }
 .mint-field .mint-cell-title {
-    width: 105px;
+    width: 210px;
     -webkit-box-flex: 0;
         -ms-flex: none;
             flex: none;
@@ -366,10 +366,10 @@
 }
 .mint-field-state {
     color: inherit;
-    margin-left: 20px;
+    margin-left: 40px;
 }
 .mint-field-state .mintui {
-    font-size: 20px;
+    font-size: 40px;
 }
 .mint-field-state.is-default {
     margin-left: 0;
@@ -460,10 +460,10 @@
 .mint-switch-core {
     display: inline-block;
     position: relative;
-    width: 52px;
-    height: 32px;
+    width: 104px;
+    height: 64px;
     border: 1px solid #d9d9d9;
-    border-radius: 16px;
+    border-radius: 32px;
     box-sizing: border-box;
     background: #d9d9d9;
 }
@@ -476,17 +476,17 @@
     transition: -webkit-transform .3s;
     transition: transform .3s;
     transition: transform .3s, -webkit-transform .3s;
-    border-radius: 15px;
+    border-radius: 30px;
 }
 .mint-switch-core::after {
-    width: 30px;
-    height: 30px;
+    width: 60px;
+    height: 60px;
     background-color: #fff;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, .4);
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .4);
 }
 .mint-switch-core::before {
-    width: 50px;
-    height: 30px;
+    width: 100px;
+    height: 60px;
     background-color: #fdfdfd;
 }
 .mint-switch-input {
@@ -501,8 +501,8 @@
             transform: scale(0);
 }
 .mint-switch-input:checked + .mint-switch-core::after {
-    -webkit-transform: translateX(20px);
-            transform: translateX(20px);
+    -webkit-transform: translateX(40px);
+            transform: translateX(40px);
 }
 
 .mint-spinner-snake {
@@ -763,7 +763,7 @@ display: inline-block;
 }
 .mint-tab-item-label {
     color: inherit;
-    font-size: 28px;
+    font-size: 24px;
     line-height: 1
 }
 
@@ -884,7 +884,7 @@ display: inline-block;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    padding: 8px 10px;
+    padding: 16px 20px;
     z-index: 1;
 }
 .mint-searchbar-inner {
@@ -892,19 +892,20 @@ display: inline-block;
         -ms-flex-align: center;
             align-items: center;
     background-color: #fff;
-    border-radius: 2px;
+    border-radius: 4px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-flex: 1;
         -ms-flex: 1;
             flex: 1;
-    height: 28px;
-    padding: 4px 6px;
+    height: 56px;
+    padding: 8px 12px;
 }
 .mint-searchbar-inner .mintui-search {
-    font-size: 12px;
+    font-size: 24px;
     color: #d9d9d9;
+    margin-right: 6px;
 }
 .mint-searchbar-core {
     -webkit-appearance: none;
@@ -948,13 +949,13 @@ display: inline-block;
 }
 .mint-checklist-label {
     display: block;
-    padding: 0 10px;
+    padding: 0 20px;
 }
 .mint-checklist-title {
     color: #888;
     display: block;
-    font-size: 12px;
-    margin: 8px;
+    font-size: 24px;
+    margin: 16px;
 }
 .mint-checkbox {}
 .mint-checkbox.is-right {
@@ -962,7 +963,7 @@ display: inline-block;
 }
 .mint-checkbox-label {
     vertical-align: middle;
-    margin-left: 6px;
+    margin-left: 12px;
 }
 .mint-checkbox-input {
     display: none;
@@ -984,10 +985,10 @@ display: inline-block;
     display: inline-block;
     background-color: #fff;
     border-radius: 100%;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     position: relative;
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     vertical-align: middle;
 }
 .mint-checkbox-core::after {
@@ -995,11 +996,11 @@ display: inline-block;
     border-left: 0;
     border-top: 0;
     content: " ";
-    top: 3px;
-    left: 6px;
+    top: 6px;
+    left: 12px;
     position: absolute;
-    width: 4px;
-    height: 8px;
+    width: 8px;
+    height: 16px;
     -webkit-transform: rotate(45deg) scale(0);
             transform: rotate(45deg) scale(0);
     -webkit-transition: -webkit-transform .2s;
@@ -1058,20 +1059,20 @@ display: inline-block;
     display: inline-block;
     background-color: #fff;
     border-radius: 100%;
-    border: 1px solid #ccc;
+    border: 2px solid #ccc;
     position: relative;
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height: 40px;
     vertical-align: middle;
 }
 .mint-radio-core::after {
     content: " ";
     border-radius: 100%;
-    top: 5px;
-    left: 5px;
+    top: 10px;
+    left: 10px;
     position: absolute;
-    width: 8px;
-    height: 8px;
+    width: 16px;
+    height: 16px;
     -webkit-transition: -webkit-transform .2s;
     transition: -webkit-transform .2s;
     transition: transform .2s;
@@ -1083,18 +1084,21 @@ display: inline-block;
 .mint-loadmore {
     overflow: hidden
 }
-.mint-loadmore-content {}
+.mint-loadmore-content {
+    position: relative;
+}
 .mint-loadmore-content.is-dropped {
     -webkit-transition: .2s;
-    transition: .2s
+    transition: .2s;
 }
 .mint-loadmore-top, .mint-loadmore-bottom {
     text-align: center;
-    height: 100px;
+    min-height: 100px;
+    height: auto;
     line-height: 100px
 }
 .mint-loadmore-top {
-    margin-top: -100px
+    margin-top: -100px;
 }
 .mint-loadmore-bottom {
     margin-bottom: -100px
@@ -1108,59 +1112,72 @@ display: inline-block;
     vertical-align: middle
 }
 /* more */
-.mint-loadmore-top .mint-spinner-snake {
+.mint-loadmore-top .mint-spinner-snake,
+.mint-loadmore-bottom .mint-spinner-snake {
+    /* margin-top: 50px;
+    margin-bottom: 20px; */
     width: 56px !important;
-    height: 56px !important
+    height: 56px !important;
 }
+/* .mint-loadmore-content.is-dropped .mint-loadmore-bottom .mint-spinner-snake {
+    position: fixed;
+    padding: 10px;
+    bottom: 10px;
+    left: 50%;
+    width: 100%;
+    margin-bottom: 50px;
+    margin-left: -28px;
+    background: #fff;
+} */
 
 .mint-actionsheet {
-  position: fixed;
-  background: #e0e0e0;
-  width: 100%;
-  text-align: center;
-  bottom: 0;
-  left: 50%;
-  -webkit-transform: translate3d(-50%, 0, 0);
-          transform: translate3d(-50%, 0, 0);
-  -webkit-backface-visibility: hidden;
-          backface-visibility: hidden;
-  -webkit-transition: -webkit-transform .3s ease-out;
-  transition: -webkit-transform .3s ease-out;
-  transition: transform .3s ease-out;
-  transition: transform .3s ease-out, -webkit-transform .3s ease-out;
+    position: fixed;
+    background: #e0e0e0;
+    width: 100%;
+    text-align: center;
+    bottom: 0;
+    left: 50%;
+    -webkit-transform: translate3d(-50%, 0, 0);
+            transform: translate3d(-50%, 0, 0);
+    -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
+    -webkit-transition: -webkit-transform .3s ease-out;
+    transition: -webkit-transform .3s ease-out;
+    transition: transform .3s ease-out;
+    transition: transform .3s ease-out, -webkit-transform .3s ease-out;
 }
 .mint-actionsheet-list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 .mint-actionsheet-listitem {
-  border-bottom: solid 2px #e0e0e0;
+    border-bottom: solid 2px #e0e0e0;
 }
 .mint-actionsheet-listitem, .mint-actionsheet-button {
-  display: block;
-  width: 100%;
-  height: 90px;
-  line-height: 90px;
-  font-size: 36px;
-  color: #333;
-  background-color: #fff;
+    display: block;
+    width: 100%;
+    height: 90px;
+    line-height: 90px;
+    font-size: 36px;
+    color: #333;
+    background-color: #fff;
 }
 .mint-actionsheet-listitem:active, .mint-actionsheet-button:active {
-  background-color: #f0f0f0;
+    background-color: #f0f0f0;
 }
 .actionsheet-float-enter, .actionsheet-float-leave-active {
-  -webkit-transform: translate3d(-50%, 100%, 0);
-          transform: translate3d(-50%, 100%, 0);
+    -webkit-transform: translate3d(-50%, 100%, 0);
+            transform: translate3d(-50%, 100%, 0);
 }
 .v-modal-enter {
-  -webkit-animation: v-modal-in .2s ease;
-          animation: v-modal-in .2s ease;
+    -webkit-animation: v-modal-in .2s ease;
+            animation: v-modal-in .2s ease;
 }
 
 .v-modal-leave {
-  -webkit-animation: v-modal-out .2s ease forwards;
-          animation: v-modal-out .2s ease forwards;
+    -webkit-animation: v-modal-out .2s ease forwards;
+            animation: v-modal-out .2s ease forwards;
 }
 
 @-webkit-keyframes v-modal-in {
@@ -1300,13 +1317,13 @@ display: inline-block;
             transform: translateX(-50%);
 }
 .mint-swipe-indicator {
-    width: 8px;
-    height: 8px;
+    width: 16px;
+    height: 16px;
     display: inline-block;
     border-radius: 100%;
     background: #000;
     opacity: 0.2;
-    margin: 0 3px;
+    margin: 0 8px;
 }
 .mint-swipe-indicator.is-active {
     background: #fff;
@@ -1461,8 +1478,8 @@ display: inline-block;
           transition-duration: 0s;
 }
 .picker-item {
-  height: 72px;
-  line-height: 72px;
+  height: 72px !important;
+  line-height: 72px !important;
   padding: 0 20px;
   white-space: nowrap;
   position: relative;
@@ -1485,6 +1502,8 @@ display: inline-block;
   pointer-events: none
 }
 .picker-item.picker-selected {
+    height: 72px !important;
+    line-height: 72px !important;
   color: #000;
   -webkit-transform: translate3d(0, 0, 0) rotateX(0);
           transform: translate3d(0, 0, 0) rotateX(0);
@@ -1920,8 +1939,8 @@ display: inline-block;
             flex-direction: column
 }
 .mint-indexlist-navitem {
-    padding: 2px 6px;
-    font-size: 12px;
+    padding: 4px 12px;
+    font-size: 24px;
     -webkit-user-select: none;
        -moz-user-select: none;
         -ms-user-select: none;
